--- a/arboviroses/src/main/resources/application.properties
+++ b/arboviroses/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8001
 # Database configuration
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/arboviroses
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=sup01
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
