Api crud tela localidade

--- a/arboviroses/src/main/resources/application.properties
+++ b/arboviroses/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/arboviroses
 spring.datasource.username=postgres
 spring.datasource.password=sup01
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+# Jwt configuration
+jwt.expiration = 3600000
+
+# Swagger
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
