Alterando parametro database

--- a/arboviroses/src/main/resources/application.properties
+++ b/arboviroses/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=arboviroses
 server.port=8001
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/arboviroses
-spring.datasource.username=postgres
-spring.datasource.password=sup01
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/arboviroses
+#spring.datasource.username=postgres
+#spring.datasource.password=sup01
+
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+
 
 # Jwt configuration
 jwt.expiration = 3600000
