--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,9 @@ spring.application.name=arboviroses
 server.port=8001
 
 # Database configuration
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/arboviroses
-#spring.datasource.username=postgres
-#spring.datasource.password=sup01
-
-spring.datasource.url=${JDBC_DATASOURCE_URL}
-
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/arboviroses
+spring.datasource.username=postgres
+spring.datasource.password=sup01
 
 # Jwt configuration
 jwt.expiration = 3600000
